[package]
name = "pickles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
kimchi = { git = "https://github.com/o1-labs/proof-systems.git", branch = "develop" }
serde = "1.0.117"
serde_json = "1.0.117"
